index.html actualizado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 	<h1>Hola mundo</h1>
 	
-	<h2>desde github con Jenkins</h2>
+	<h2>Desde GitHub a través de Jenkins guardado en Amazon S3</h2>
 </html>
